@@ -540,3 +540,6 @@
 
 [2023-02-21]
 - Updated the smart script for Chicken Escapee to give every member of a group the quest item.
+- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Drone for the quest Mischief in the Making.
+- Added Skyreach Crystal Cluster to the loot table of Sapphire Hive Wasp for the quest Mischief in the Making.
+- Updated the flags of Skyreach Crystal Cluster to allow every member of a group to loot it.
